# ffmpeg-playground

./: .gitignore  CMakeLists.txt  main.cpp
cmake/: FindFFmpeg.cmake
